--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript Counter App",
+  "name": "Javascript-Counter-App",
   "version": "1.0.0",
   "description": "JavaScript Counter App",
   "main": "index.html",
